$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.609 2010/05/29 17:09:09 nm4 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.72
-----------------

JJ/01 installed exipick 20100104.1, adding $max_received_linelength, $data_path, and $header_path variables; fixed documentation bugs and typos

JJ/02 installed exipick 20100222.0, added --input-dir and --finput to allow exipick to access non-standard spools, including the "frozen" queue (Finput)

NM/01 Bugzilla 965: Support mysql stored procedures.
      Patch from Alain Williams

NM/02 Bugzilla 961: Spacing fix (syntax error) on Makefile directives for NetBSD

NM/03 Bugzilla 955: Documentation fix for max_rcpts.
      Patch from Andreas Metzler

NM/04 Bugzilla 954: Fix for unknown responses from Dovecot authenticator.
      Patch from Kirill Miazine

NM/05 Bugzilla 671: Added umask to procmail example.

JJ/03 installed exipick 20100323.0, fixing doc bug

NM/06 Bugzilla 988: CVE-2010-2023 - prevent hardlink attack on sticky mail
      directory.  Notification and patch from Dan Rosenberg

TK/01 PDKIM: Upgrade PolarSSL files to upstream version 0.12.1.

TK/02 Improve log output when DKIM signing operation fails.

MH/01 Treat the transport option dkim_domain as a colon separated
      list, not as a single string, and sign the message with each element,
      omitting multiple occurences of the same signer.



Exim version 4.71
-----------------

TK/01 Bugzilla 912: Fix DKIM segfault on empty headers/body

NM/01 Bugzilla 913: Documentation fix for gnutls_* options.

NM/02 Bugzilla 722: Documentation for randint.  Better randomness defaults.

NM/03 Bugzilla 847: Enable DNSDB lookup by default.

NM/04 Bugzilla 915: Flag broken perl installation during build.


Exim version 4.70
-----------------

TK/01 Added patch by Johannes Berg that expands the main option
      "spamd_address" if it starts with a dollar sign.
