@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.609 2010/05/29 17:09:09 nm4 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.610 2010/05/29 19:16:50 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -36,6 +36,8 @@ MH/01 Treat the transport option dkim_domain as a colon separated
       list, not as a single string, and sign the message with each element,
       omitting multiple occurences of the same signer.
 
+NM/07 Null terminate DKIM strings, Null initialise DKIM variable
+      Bugzilla 985, 986.  Patch by Simon Arlott
 
 
 Exim version 4.71
